# consola-rs

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEATURE-FLAGS.md  ISSUES  LICENSE  MIGRATION.md  Makefile  PROMPTS.md  README.md  REPORTERS.md  RISKS.md  SECURITY.md  SPEC.md  WASM.md  deny.toml  justfile  tasks.md
.cargo/: config.toml
.github/: zizmor.yml
.github/workflows/: benchmarks.yml  bloat-check-pr-comment.yml  bloat-check.yml  ci.yml  codeql.yml  committed.yml  release.yml  typos.yml  zizmor.yml
benches/: log_bench.rs  logging.rs  logging_benchmark.rs
examples/: basic.rs  box.rs  custom_reporter.rs  error.rs  formats.rs  json.rs
examples/wasm/: Cargo.toml  index.html  wrapper.js
examples/wasm/src/: lib.rs
src/: bridge_log.rs  bridge_tracing.rs  clock.rs  consola.rs  constants.rs  error.rs  error_chain.rs  format.rs  levels.rs  lib.rs  macros.rs  prompt.rs  record.rs  reporter.rs  sync.rs  throttling.rs  types.rs  utils.rs  wasm.rs
src/consola/: log_impl.rs  mod.rs  tracing_impl.rs
src/reporters/: basic.rs  browser.rs  fancy.rs  mod.rs
src/types/: format.rs  mod.rs  prompt.rs
src/util/: boxes.rs  color.rs  log.rs  mod.rs  string.rs  tree.rs
tests/: code_quality_tests.rs  consola.rs  constants.rs  env_tests.rs  error_chain_tests.rs  fancy_tests.rs  json_tests.rs  lib.rs  property_tests.rs  snapshot_tests.rs  throttling_tests.rs  tracing.rs  types.rs  utils_tests.rs  wasm_browser.rs  wasm_node.rs
tests/snapshots/: snapshot_tests__basic_box_colored.snap  snapshot_tests__basic_box_plain.snap  snapshot_tests__basic_error_chain_colored.snap  snapshot_tests__basic_error_chain_plain.snap  snapshot_tests__basic_info_colored.snap  snapshot_tests__basic_info_plain.snap  snapshot_tests__basic_log_types.snap  snapshot_tests__basic_raw.snap  snapshot_tests__basic_vs_raw_comparison.snap  snapshot_tests__fancy_box_colored.snap  snapshot_tests__fancy_box_plain.snap  snapshot_tests__fancy_error_chain_colored.snap  snapshot_tests__fancy_error_chain_plain.snap  snapshot_tests__fancy_info_basic_colored.snap  snapshot_tests__fancy_info_basic_plain.snap  snapshot_tests__fancy_log_types.snap  snapshot_tests__fancy_raw.snap  snapshot_tests__fancy_repetition_colored.snap  snapshot_tests__fancy_repetition_plain.snap  snapshot_tests__fancy_unicode_fallback.snap  snapshot_tests__width_fallback_simple.snap
