[package]
name = "consola"
version = "0.0.0-alpha.0"
edition = "2024"
rust-version = "1.96"
description = "🐨 Elegant Console Logger for Rust and Browser"
readme = "README.md"
repository = "https://github.com/MuntasirSZN/consola-rs"
license = "MIT"
keywords = ["ansi", "console", "logging", "wasm"]
categories = ["development-tools"]

[package.metadata.cargo-nextest.profile.default]
fail-fast = false
retries = 1
junit = { path = "junit.xml" }

[dependencies]

[dev-dependencies]

[features]

[profile.bench]
lto = true
codegen-units = 1
