[package]
name = "consola"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
description = "🐨 Elegant Console Logger for Rust and Browser"
readme = "README.md"
repository = "https://github.com/MuntasirSZN/consola-rs"
license = "MIT"
keywords = ["ansi", "console", "logging", "wasm"]
categories = ["development-tools"]

[package.metadata.cargo-nextest.profile.default]
fail-fast = false
retries = 1
junit = { path = "junit.xml" }

[dependencies]
parking_lot = { version = "0.12", optional = true }
anstyle = "1"
unicode-width = "0.2"
terminal_size = "0.4"
jiff = { version = "0.2", optional = true, features = ["js"] }
chrono = { version = "0.4", optional = true }
log = { version = "0.4", optional = true }
tracing = { version = "0.1", optional = true }
tracing-core = { version = "0.1", optional = true }
backtrace = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console", "Window"] }
wasm-bindgen = { version = "0.2", optional = true }
demand = { version = "2", optional = true }
time = { version = "0.3", optional = true, features = ["local-offset"] }
inquire = { version = "0.9", optional = true }
dialoguer = { version = "0.12", optional = true }

[features]
default = ["jiff", "backtrace"]
jiff = ["dep:jiff"]
chrono = ["dep:chrono"]
time = ["dep:time"]
log = ["dep:log"]
tracing = ["dep:tracing", "dep:tracing-core"]
backtrace = ["dep:backtrace"]
browser = ["dep:web-sys", "dep:wasm-bindgen"]
parking_lot = ["dep:parking_lot"]
prompt = ["dep:demand"]
prompt-inquire = ["dep:inquire"]
prompt-dialoguer = ["dep:dialoguer"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "error"
path = "examples/error.rs"

[[example]]
name = "box"
path = "examples/box.rs"

[[example]]
name = "custom_reporter"
path = "examples/custom_reporter.rs"

[[example]]
name = "json"
path = "examples/json.rs"

[dev-dependencies]
parking_lot = "0.12"
divan = { version = "4", package = "codspeed-divan-compat" }
wasm-bindgen-test = "0.3"
console_error_panic_hook = "0.1"
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
getrandom = { version = "0.2", features = ["js"] }

[[bench]]
name = "log_bench"
harness = false

[profile.bench]
lto = true
codegen-units = 1
