[package]
name = "consola-wasm-example"
version = "0.1.0"
edition = "2024"

[dependencies]
consola = { path = "../..", features = ["browser"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "Window"] }
console_error_panic_hook = "0.1"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
